# http-fdw

./: LICENSE  pyproject.toml  setup.cfg  setup.py
http_fdw/: __init__.py  http_fwd.py
