[tool.poetry]
name = "http_fdw"
version = "2020.5.0a0"
description = "Multicorn based HTTP client PostgreSQL foreign data wrapper"
authors = ["Shane R. Spencer <spencersr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
